hphp/hack/test/error_formatting_highlighted/two_pos_embedded_in_larger_pos.php
<?hh

function f(): bool {
  return "5" === 5;
}
